# streaming-sort

./: .travis.yml  ChangeLog.md  README.md  shell.nix  streaming-sort.cabal
src/Streaming/: Sort.hs
src/Streaming/Sort/: Lifted.hs
test/: Spec.hs
