name:                streaming-sort
version:             0.1.0.0
synopsis:            Sorting streams
description:         Sort streaming values, using files for a cached merge-sort of long @Stream@s.
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Data, Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2, GHC == 8.0.2, GHC == 8.2.2,
                     GHC == 8.4.1, GHC == 8.5.*

source-repository head
  type:     git
  location: https://github.com/haskell-streaming/streaming-sort.git

library
  exposed-modules:     Streaming.Sort
  build-depends:       base == 4.*
                     , binary
                     , bytestring
                     , directory
                     , exceptions
                     , streaming == 0.2.*
                     , streaming-binary
                     , streaming-bytestring
                     , streaming-with
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
